@@ -36,6 +36,7 @@ import org.labkey.api.data.ColumnInfo;
 import org.labkey.api.data.Container;
 import org.labkey.api.data.ContainerFilter;
 import org.labkey.api.data.ContainerManager;
+import org.labkey.api.data.CoreSchema;
 import org.labkey.api.data.DbSchema;
 import org.labkey.api.data.JdbcType;
 import org.labkey.api.data.OORDisplayColumnFactory;
@@ -44,6 +45,7 @@ import org.labkey.api.data.RuntimeSQLException;
 import org.labkey.api.data.SQLFragment;
 import org.labkey.api.data.TableInfo;
 import org.labkey.api.data.TableSelector;
+import org.labkey.api.data.dialect.PostgreSql91Dialect;
 import org.labkey.api.data.dialect.SqlDialect;
 import org.labkey.api.dataiterator.DataIteratorContext;
 import org.labkey.api.exp.PropertyType;
@@ -110,6 +112,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.Callable;
+import java.util.concurrent.atomic.AtomicInteger;
 
 import static java.util.Objects.requireNonNull;
 import static java.util.Objects.requireNonNullElse;
@@ -721,9 +724,17 @@ public class Query
 	}
 
 
+    // Query._depth handles most recursion, but there can be unexpected recursion caused by LinkedSchema for instance, or
+    // other paths that cause a query to be compiled during resolveTable().  The thread local value makes sure this case
+    // is handled as well.
+    static private final ThreadLocal<AtomicInteger> resolveDepth = ThreadLocal.withInitial(() -> new AtomicInteger(0));
+
+    static final int MAX_TABLES_IN_QUERY = 200;
+    static final int MAX_RESOLVE_DEPTH = 20;
 
     int _countResolvedTables = 0;
     int _depth = 1;
+
 
     private int getTotalCountResolved()
     {
@@ -743,6 +754,12 @@ public class Query
 
         try
         {
+            if (resolveDepth.get().incrementAndGet() > MAX_RESOLVE_DEPTH)
+            {
+                parseError(resolveExceptions, "Too many tables used in this query (recursive?)", node);
+                return null;
+            }
+
             ret = _resolveTable(currentSchema, node, key, alias, resolveExceptions, queryDefOUT, cfType);
             if ((ret != null) && (queryDefOUT[0] == null))
             {
@@ -755,6 +772,10 @@ public class Query
         {
             _parseErrors.add(qnfe);
             return null;
+        }
+        finally
+        {
+            resolveDepth.get().decrementAndGet();
         }
 
         QueryDefinition def = queryDefOUT[0];
@@ -835,7 +856,7 @@ public class Query
         boolean trackDependency = true;
 
         ++_countResolvedTables;
-        if (getTotalCountResolved() > 200 || _depth > 20)
+        if (getTotalCountResolved() > MAX_TABLES_IN_QUERY || _depth > MAX_RESOLVE_DEPTH)
         {
             // recursive query?
             parseError(resolveExceptions, "Too many tables used in this query (recursive?)", node);
@@ -1883,123 +1904,252 @@ d,seven,twelve,day,month,date,duration,guid
         new SqlTest("SELECT R.guid FROM R WHERE overlaps(CAST('2001-01-01' AS DATE), CAST('2001-01-10' AS DATE), CAST('2001-01-05' AS DATE), CAST('2001-01-15' AS DATE))", 1, Rsize),
 
         // regression test: field reference in sub-select (https://www.labkey.org/home/Developer/issues/issues-details.view?issueId=43580)
-        new SqlTest("SELECT (SELECT GROUP_CONCAT(b.displayname, ', ') FROM core.UsersAndGroups b WHERE b.email IN (SELECT UNNEST(STRING_TO_ARRAY(a.title, ',')))) AS procedurename, a.parent.rowid FROM core.containers a ", 2, 1)
+        new SqlTest("SELECT (SELECT GROUP_CONCAT(b.displayname, ', ') FROM core.UsersAndGroups b WHERE b.email IN (SELECT UNNEST(STRING_TO_ARRAY(a.title, ',')))) AS procedurename, a.parent.rowid FROM core.containers a ", 2, 1),
+
+        new MethodSqlTest("SELECT is_distinct_from(NULL,NULL)", JdbcType.BOOLEAN, false),
+        new MethodSqlTest("SELECT is_not_distinct_from(NULL,NULL)", JdbcType.BOOLEAN, true),
+        new MethodSqlTest("SELECT is_distinct_from(1,NULL)", JdbcType.BOOLEAN, true),
+        new MethodSqlTest("SELECT is_not_distinct_from(1,NULL)", JdbcType.BOOLEAN, false),
+        new MethodSqlTest("SELECT is_distinct_from(1,1)", JdbcType.BOOLEAN, false),
+        new MethodSqlTest("SELECT is_not_distinct_from(1,1)", JdbcType.BOOLEAN, true),
+        new MethodSqlTest("SELECT is_distinct_from(1,2)", JdbcType.BOOLEAN, true),
+        new MethodSqlTest("SELECT is_not_distinct_from(1,2)", JdbcType.BOOLEAN, false)
     };
 
 
-    static SqlTest[] postgresOnlyFunctions = new SqlTest[]
+    static List<SqlTest> postgresOnlyFunctions()
     {
-        new SqlTest("SELECT stddev_samp(d), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT var_samp(d), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT bool_and((d < 0)), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT bool_or((d < 0)), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT every((d > 0)), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT bit_or(seven), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT bit_and(seven), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT mode(seven), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT corr(seven, d), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT corr(seven, d), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT covar_pop(seven, d), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT covar_samp(seven, d), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT regr_avgx(seven, d), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT regr_avgy(seven, d), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT regr_count(seven, d), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT regr_intercept(seven, d), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT regr_r2(seven, d), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT regr_slope(seven, d), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT regr_sxx(seven, d), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT regr_sxy(seven, d), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT regr_syy(seven, d), day FROM R GROUP BY day", 2, 7),
-        new SqlTest("SELECT 'similar' WHERE similar_to('abc','abc')", 1, 1),
-        new SqlTest("SELECT 'similar' WHERE similar_to('abc','a')", 1, 0),
-        new SqlTest("SELECT 'similar' WHERE similar_to('abc','%(b|d)%')", 1, 1),
-        new SqlTest("SELECT 'similar' WHERE similar_to('abc','(b|c)%')", 1, 0),
-        new SqlTest("SELECT 'similar' WHERE similar_to('abc|','abc\\|', '\\')", 1, 1),
-        new SqlTest("SELECT parse_jsonb('{\"a\":1, \"b\":null}')", 1, 1),
-        new SqlTest("SELECT json_op(parse_jsonb('{\"a\":1, \"b\":null}'), '->', 'a')", 1, 1),
-        // Postgres 9.6 doesn't support direct JSONB and JSON to INTEGER casting, so use VARCHAR for our simple purposes
-        new SqlTest("SELECT f FROM (SELECT CAST(json_op(parse_jsonb('{\"a\":1, \"b\":null}'), '->', 'a') AS VARCHAR) AS f) X WHERE f != '1'", 1, 0),
-        new SqlTest("SELECT f FROM (SELECT CAST(json_op(parse_jsonb('{\"a\":1, \"b\":null}'), '->', 'a') AS VARCHAR) AS f) X WHERE f = '1'", 1, 1),
-        new SqlTest("SELECT f FROM (SELECT CAST(json_op(parse_json('{\"a\":1, \"b\":null}'), '->', 'a') AS VARCHAR) AS f) X WHERE f != '1'", 1, 0),
-        new SqlTest("SELECT f FROM (SELECT CAST(json_op(parse_json('{\"a\":1, \"b\":null}'), '->', 'a') AS VARCHAR) AS f) X WHERE f = '1'", 1, 1),
-    };
+        int majorVersion = ((PostgreSql91Dialect)CoreSchema.getInstance().getSqlDialect()).getMajorVersion();
+
+        List<SqlTest> result = new ArrayList<>(
+            List.of(
+                new SqlTest("SELECT stddev_samp(d), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT var_samp(d), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT bool_and((d < 0)), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT bool_or((d < 0)), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT every((d > 0)), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT bit_or(seven), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT bit_and(seven), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT mode(seven), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT corr(seven, d), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT corr(seven, d), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT covar_pop(seven, d), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT covar_samp(seven, d), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT regr_avgx(seven, d), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT regr_avgy(seven, d), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT regr_count(seven, d), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT regr_intercept(seven, d), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT regr_r2(seven, d), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT regr_slope(seven, d), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT regr_sxx(seven, d), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT regr_sxy(seven, d), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT regr_syy(seven, d), day FROM R GROUP BY day", 2, 7),
+                new SqlTest("SELECT 'similar' WHERE similar_to('abc','abc')", 1, 1),
+                new SqlTest("SELECT 'similar' WHERE similar_to('abc','a')", 1, 0),
+                new SqlTest("SELECT 'similar' WHERE similar_to('abc','%(b|d)%')", 1, 1),
+                new SqlTest("SELECT 'similar' WHERE similar_to('abc','(b|c)%')", 1, 0),
+                new SqlTest("SELECT 'similar' WHERE similar_to('abc|','abc\\|', '\\')", 1, 1),
+
+                // parse_json, parse_jsonb, and json_op
+                new SqlTest("SELECT parse_jsonb('{\"a\":1, \"b\":null}')", 1, 1),
+                new SqlTest("SELECT json_op(parse_jsonb('{\"a\":1, \"b\":null}'), '->', 'a')", 1, 1),
+                // Postgres 9.6 doesn't support direct JSONB and JSON to INTEGER casting, so use VARCHAR for our simple purposes
+                new SqlTest("SELECT f FROM (SELECT CAST(json_op(parse_jsonb('{\"a\":1, \"b\":null}'), '->', 'a') AS VARCHAR) AS f) X WHERE f != '1'", 1, 0),
+                new SqlTest("SELECT f FROM (SELECT CAST(json_op(parse_jsonb('{\"a\":1, \"b\":null}'), '->', 'a') AS VARCHAR) AS f) X WHERE f = '1'", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT CAST(json_op(parse_json('{\"a\":1, \"b\":null}'), '->', 'a') AS VARCHAR) AS f) X WHERE f != '1'", 1, 0),
+                new SqlTest("SELECT f FROM (SELECT CAST(json_op(parse_json('{\"a\":1, \"b\":null}'), '->', 'a') AS VARCHAR) AS f) X WHERE f = '1'", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT CAST(json_op(parse_json('{\"a\":1, \"b\":null}'), '->', 'a') AS VARCHAR) AS f) X WHERE f = '1'", 1, 1),
+
+                // to_json and to_jsonb
+                new SqlTest("SELECT f FROM (SELECT CAST(to_json(CAST('{\"a\":1, \"b\":null}' AS VARCHAR)) AS VARCHAR) AS f) X WHERE f = '\"{\\\"a\\\":1, \\\"b\\\":null}\"'", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT CAST(to_jsonb(CAST('{\"a\":1, \"b\":null}' AS VARCHAR)) AS VARCHAR) AS f) X WHERE f = '\"{\\\"a\\\":1, \\\"b\\\":null}\"'", 1, 1),
+
+                // array_to_json
+                new SqlTest("SELECT f FROM (SELECT CAST(array_to_json(string_to_array('xx~^~yy~^~zz', '~^~', 'yy')) AS VARCHAR) AS f) X WHERE f = '[\"xx\",null,\"zz\"]'", 1, 1),
+
+                // row_to_json
+                new SqlTest("SELECT f FROM (SELECT CAST(row_to_json(row(1,'foo')) AS VARCHAR) AS f) X WHERE f = '{\"f1\":1,\"f2\":\"foo\"}'", 1, 1),
+
+                // json_build_array and jsonb_build_array
+                new SqlTest("SELECT f FROM (SELECT CAST(json_build_array(1, 2, 'foo', 4, 5) AS VARCHAR) AS f) X WHERE f = '[1, 2, \"foo\", 4, 5]'", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT CAST(jsonb_build_array(1, 2, 'foo', 4, 5) AS VARCHAR) AS f) X WHERE f = '[1, 2, \"foo\", 4, 5]'", 1, 1),
+
+                // json_build_object and jsonb_build_object
+                new SqlTest("SELECT f FROM (SELECT CAST(json_build_object('foo', 1, 2, row(3,'bar')) AS VARCHAR) AS f) X WHERE f = '{\"foo\" : 1, \"2\" : {\"f1\":3,\"f2\":\"bar\"}}'", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT CAST(jsonb_build_object('foo', 1, 2, row(3,'bar')) AS VARCHAR) AS f) X WHERE f = '{\"2\": {\"f1\": 3, \"f2\": \"bar\"}, \"foo\": 1}'", 1, 1),
+
+                // json_object and jsonb_object
+                new SqlTest("SELECT f FROM (SELECT CAST(json_object('{a, 1, b, \"def\", c, 3.5}') AS VARCHAR) AS f) X WHERE f = '{\"a\" : \"1\", \"b\" : \"def\", \"c\" : \"3.5\"}'", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT CAST(jsonb_object('{a, 1, b, \"def\", c, 3.5}') AS VARCHAR) AS f) X WHERE f = '{\"a\": \"1\", \"b\": \"def\", \"c\": \"3.5\"}'", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT CAST(json_object('{a,b}', '{1,2}') AS VARCHAR) AS f) X WHERE f = '{\"a\" : \"1\", \"b\" : \"2\"}'", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT CAST(jsonb_object('{a,b}', '{1,2}') AS VARCHAR) AS f) X WHERE f = '{\"a\": \"1\", \"b\": \"2\"}'", 1, 1),
+
+                // json_array_length and jsonb_array_length
+                new SqlTest("SELECT f FROM (SELECT json_array_length(json_build_array(1, 2, 'foo', 4, 5)) AS f) X WHERE f = 5", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT jsonb_array_length(jsonb_build_array(1, 2, 'foo', 4, 5)) AS f) X WHERE f = 5", 1, 1),
+
+                // json_each and jsonb_each, json_each_text and jsonb_each_text
+                new SqlTest("SELECT json_each(parse_json('{\"a\":\"foo\", \"b\":\"bar\"}'))", 1, 2),
+                new SqlTest("SELECT jsonb_each(parse_jsonb('{\"a\":\"foo\", \"b\":\"bar\"}'))", 1, 2),
+                new SqlTest("SELECT json_each_text(parse_json('{\"a\":\"foo\", \"b\":\"bar\"}'))", 1, 2),
+                new SqlTest("SELECT jsonb_each_text(parse_jsonb('{\"a\":\"foo\", \"b\":\"bar\"}'))", 1, 2),
+
+                // json_extract_path and jsonb_extract_path, json_extract_path_text and jsonb_extract_path_text
+                new SqlTest("SELECT f FROM (SELECT CAST(json_extract_path('{\"f2\":{\"f3\":1},\"f4\":{\"f5\":99,\"f6\":\"foo\"}}', 'f4', 'f6') AS VARCHAR) AS f) X WHERE f = '\"foo\"'", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT CAST(jsonb_extract_path('{\"f2\":{\"f3\":1},\"f4\":{\"f5\":99,\"f6\":\"foo\"}}', 'f4', 'f6') AS VARCHAR) AS f) X WHERE f = '\"foo\"'", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT CAST(json_extract_path_text('{\"f2\":{\"f3\":1},\"f4\":{\"f5\":99,\"f6\":\"foo\"}}', 'f4', 'f6') AS VARCHAR) AS f) X WHERE f = 'foo'", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT CAST(jsonb_extract_path_text('{\"f2\":{\"f3\":1},\"f4\":{\"f5\":99,\"f6\":\"foo\"}}', 'f4', 'f6') AS VARCHAR) AS f) X WHERE f = 'foo'", 1, 1),
+
+                // json_object_keys and jsonb_object_keys
+                new SqlTest("SELECT f FROM (SELECT json_object_keys('{\"f1\":\"abc\",\"f2\":{\"f3\":\"a\", \"f4\":\"b\"}}') AS f) X WHERE f IN ('f1', 'f2')", 1, 2),
+                new SqlTest("SELECT f FROM (SELECT jsonb_object_keys('{\"f1\":\"abc\",\"f2\":{\"f3\":\"a\", \"f4\":\"b\"}}') AS f) X WHERE f IN ('f1', 'f2')", 1, 2),
+
+                // json_array_elements and jsonb_array_elements, json_array_elements_text and jsonb_array_elements_text
+                new SqlTest("SELECT f FROM (SELECT CAST(json_array_elements('[1,true, [2,false]]') AS VARCHAR) AS f) X WHERE f IN ('1', 'true', '[2,false]')", 1, 3),
+                new SqlTest("SELECT f FROM (SELECT CAST(jsonb_array_elements('[1,true, [2,false]]') AS VARCHAR) AS f) X WHERE f IN ('1', 'true', '[2, false]')", 1, 3),
+                new SqlTest("SELECT f FROM (SELECT CAST(json_array_elements_text('[1,true, [2,false]]') AS VARCHAR) AS f) X WHERE f IN ('1', 'true', '[2,false]')", 1, 3),
+                new SqlTest("SELECT f FROM (SELECT CAST(jsonb_array_elements_text('[1,true, [2,false]]') AS VARCHAR) AS f) X WHERE f IN ('1', 'true', '[2, false]')", 1, 3),
+
+                // json_typeof and jsonb_typeof
+                new SqlTest("SELECT f FROM (SELECT json_typeof('-123.4') AS f) X WHERE f IN ('number')", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT jsonb_typeof('-123.4') AS f) X WHERE f IN ('number')", 1, 1),
+
+                // json_strip_nulls and jsonb_strip_nulls
+                new SqlTest("SELECT f FROM (SELECT CAST(json_strip_nulls('[{\"f1\":1, \"f2\":null}, 2, null, 3]') AS VARCHAR) AS f) X WHERE f IN ('[{\"f1\":1},2,null,3]')", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT CAST(jsonb_strip_nulls('[{\"f1\":1, \"f2\":null}, 2, null, 3]') AS VARCHAR) AS f) X WHERE f IN ('[{\"f1\": 1}, 2, null, 3]')", 1, 1),
+
+                // jsonb_pretty
+                new SqlTest("SELECT f FROM (SELECT jsonb_pretty('[{\"f1\":1,\"f2\":null}, 2]') AS f) X WHERE f LIKE '%        \"f2\": null%'", 1, 1),
+
+                // jsonb_set
+                new SqlTest("SELECT f FROM (SELECT CAST(jsonb_set('[{\"f1\":1,\"f2\":null},2,null,3]', '{0,f1}', '[2,3,4]', false) AS VARCHAR) AS f) X WHERE f = '[{\"f1\": [2, 3, 4], \"f2\": null}, 2, null, 3]'", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT CAST(jsonb_set('[{\"f1\":1,\"f2\":null},2,null,3]', '{0,f1}', '[2,3,4]') AS VARCHAR) AS f) X WHERE f = '[{\"f1\": [2, 3, 4], \"f2\": null}, 2, null, 3]'", 1, 1),
+
+                // jsonb_insert
+                new SqlTest("SELECT f FROM (SELECT CAST(jsonb_insert('{\"a\": [0,1,2]}', '{a, 1}', '\"new_value\"') AS VARCHAR) AS f) X WHERE f = '{\"a\": [0, \"new_value\", 1, 2]}'", 1, 1),
+                new SqlTest("SELECT f FROM (SELECT CAST(jsonb_insert('{\"a\": [0,1,2]}', '{a, 1}', '\"new_value\"', true) AS VARCHAR) AS f) X WHERE f = '{\"a\": [0, 1, \"new_value\", 2]}'", 1, 1),
+
+                // TEST CTE handling with undocumented test-only methods
+                new SqlTest("SELECT __cte_two__() as two, __cte_three__() as three, __cte_two__() * __cte_three__() as six_simple, __cte_times__(__cte_two__(), __cte_three__()) as six_complex", 4, 1)
+            ));
+
+        if (majorVersion >= 12)
+        {
+            result.addAll(Arrays.asList(
+                    // jsonb_path_exists
+                    new SqlTest("SELECT f FROM (SELECT jsonb_path_exists('{\"a\":[1,2,3,4,5]}', '$.a[*] ? (@ >= $min && @ <= $max)', '{\"min\":2, \"max\":4}') AS f) X WHERE f = true", 1, 1),
+
+                    // jsonb_path_match
+                    new SqlTest("SELECT f FROM (SELECT jsonb_path_match('{\"a\":[1,2,3,4,5]}', 'exists($.a[*] ? (@ >= $min && @ <= $max))', '{\"min\":2, \"max\":4}') AS f) X WHERE f = true", 1, 1),
+
+                    // jsonb_path_query
+                    new SqlTest("SELECT f FROM (SELECT CAST(jsonb_path_query('{\"a\":[1,2,3,4,5]}', '$.a[*] ? (@ >= $min && @ <= $max)', '{\"min\":2, \"max\":4}') AS VARCHAR) AS f) X WHERE f IN ('2', '3', '4')", 1, 3),
+
+                    // jsonb_path_query_array
+                    new SqlTest("SELECT f FROM (SELECT CAST(jsonb_path_query_array('{\"a\":[1,2,3,4,5]}', '$.a[*] ? (@ >= $min && @ <= $max)', '{\"min\":2, \"max\":4}') AS VARCHAR) AS f) X WHERE f = '[2, 3, 4]'", 1, 1),
+
+                    // jsonb_path_query_first
+                    new SqlTest("SELECT f FROM (SELECT CAST(jsonb_path_query_first('{\"a\":[1,2,3,4,5]}', '$.a[*] ? (@ >= $min && @ <= $max)', '{\"min\":2, \"max\":4}') AS VARCHAR) AS f) X WHERE f = '2'", 1, 1)
+            ));
+        }
+
+        if (majorVersion >= 13)
+        {
+            result.addAll(Arrays.asList(
+                    // jsonb_set_lax
+                    new SqlTest("SELECT f FROM (SELECT CAST(jsonb_set_lax('[{\"f1\":1,\"f2\":null},2,null,3]', '{0,f1}', null) AS VARCHAR) AS f) X WHERE f = '[{\"f1\": null, \"f2\": null}, 2, null, 3]'", 1, 1),
+
+                    // jsonb_path_exists_tz, jsonb_path_match_tz, jsonb_path_query_tz, jsonb_path_query_array_tz, jsonb_path_query_first_tz
+                    new SqlTest("SELECT f FROM (SELECT jsonb_path_exists_tz('[\"2015-08-01 12:00:00 -05\"]', '$[*] ? (@.datetime() < \"2015-08-02\".datetime())') AS f) X WHERE f = false", 1, 1),
+                    new SqlTest("SELECT f FROM (SELECT jsonb_path_match_tz('[\"2015-08-01 12:00:00 -05\"]', 'exists($[*] ? (@.datetime() > \"2015-08-02\".datetime()))') AS f) X WHERE f = false", 1, 1),
+                    new SqlTest("SELECT f FROM (SELECT CAST(jsonb_path_query_tz('[\"2015-08-01 12:00:00 -05\"]', '$[*] ? (@.datetime() < \"2016-08-02\".datetime())') AS VARCHAR) AS f) X", 1, 0),
+                    new SqlTest("SELECT f FROM (SELECT CAST(jsonb_path_query_array_tz('[\"2015-08-01 12:00:00 -05\"]', '$[*] ? (@.datetime() < \"2016-08-02\".datetime())') AS VARCHAR) AS f) X WHERE f = '[]'", 1, 1),
+                    new SqlTest("SELECT f FROM (SELECT CAST(jsonb_path_query_first_tz('[\"2015-08-01 12:00:00 -05\"]', '$[*] ? (@.datetime() < \"2016-08-02\".datetime())') AS VARCHAR) AS f) X WHERE f IS NULL", 1, 1)
+            ));
+        }
+        return result;
+    }
 
 
-	static SqlTest[] negative = new SqlTest[]
+	static List<SqlTest> negative()
 	{
-        new FailTest("SELECT lists.R.d, lists.R.seven FROM R"),  // Schema-qualified column names work only if FROM specifies schema
-		new FailTest("SELECT S.d, S.seven FROM S"),
-		new FailTest("SELECT S.d, S.seven FROM Folder.S"),
-		new FailTest("SELECT S.d, S.seven FROM Folder.qtest.S"),
-		new FailTest("SELECT S.d, S.seven FROM Folder.qtest.list.S"),
-        new FailTest("SELECT SUM(*) FROM R"),
-        new FailTest("SELECT d FROM R A inner join R B on 1=1"),            // ambiguous
-        new FailTest("SELECT R.d, seven FROM lists.R A"),                    // R is hidden
-        new FailTest("SELECT A.d, B.d FROM lists.R A INNER JOIN lists.R B"),     // ON expected
-        new FailTest("SELECT A.d, B.d FROM lists.R A CROSS JOIN lists.R B ON A.d = B.d"),     // ON unexpected
-        new FailTest("SELECT A.d FROM lists.R A WHERE A.StartsWith('x')"),     // bad method 17128
-        new FailTest("SELECT A.d FROM lists.R A WHERE Z.StartsWith('x')"),     // bad method
-        new FailTest("SELECT A.d FROM lists.R A WHERE A.d.StartsWith('x')"),     // bad method
-        new FailTest("WITH peeps AS (SELECT * FROM R), peeps AS (SELECT * FROM peeps1 UNION ALL SELECT * FROM peeps WHERE (1=0)) SELECT * FROM peeps"),   // Duplicate CTE names
-        new FailTest("WITH peeps AS (SELECT * FROM R), peeps1 AS (SELECT * FROM peeps1 UNION ALL SELECT * FROM peeps WHERE (1=0)) SELECT * FROM peeps"),  // CTE can't reference itself in first clause of UNION
-        new FailTest("WITH peeps AS (SELECT * FROM peeps1), peeps1 AS (SELECT * FROM R) SELECT * FROM peeps"),    // Forward reference
-        new FailTest("WITH peeps1 AS (SELECT * FROM R), peeps AS (SELECT * FROM peeps1 UNION ALL SELECT * FROM peeps WHERE (1=0) UNION ALL SELECT * FROM peeps WHERE (1=0)) SELECT * FROM peeps"),  // Can't have 2 recursive references
-        new FailTest("WITH peeps AS (SELECT * FROM R), peeps2 AS (SELECT seven FROM peeps UNION ALL SELECT date FROM peeps) SELECT * FROM peeps2"),   // Column type mismatch
-        new FailTest("WITH peeps2 AS (SELECT seven FROM R UNION SELECT seven FROM S WHERE S.seven IN (SELECT seven FROM peeps2) ) SELECT * FROM peeps2"),
+        return List.of(
+            new FailTest("SELECT lists.R.d, lists.R.seven FROM R"),  // Schema-qualified column names work only if FROM specifies schema
+            new FailTest("SELECT S.d, S.seven FROM S"),
+            new FailTest("SELECT S.d, S.seven FROM Folder.S"),
+            new FailTest("SELECT S.d, S.seven FROM Folder.qtest.S"),
+            new FailTest("SELECT S.d, S.seven FROM Folder.qtest.list.S"),
+            new FailTest("SELECT SUM(*) FROM R"),
+            new FailTest("SELECT d FROM R A inner join R B on 1=1"),            // ambiguous
+            new FailTest("SELECT R.d, seven FROM lists.R A"),                    // R is hidden
+            new FailTest("SELECT A.d, B.d FROM lists.R A INNER JOIN lists.R B"),     // ON expected
+            new FailTest("SELECT A.d, B.d FROM lists.R A CROSS JOIN lists.R B ON A.d = B.d"),     // ON unexpected
+            new FailTest("SELECT A.d FROM lists.R A WHERE A.StartsWith('x')"),     // bad method 17128
+            new FailTest("SELECT A.d FROM lists.R A WHERE Z.StartsWith('x')"),     // bad method
+            new FailTest("SELECT A.d FROM lists.R A WHERE A.d.StartsWith('x')"),     // bad method
+            new FailTest("WITH peeps AS (SELECT * FROM R), peeps AS (SELECT * FROM peeps1 UNION ALL SELECT * FROM peeps WHERE (1=0)) SELECT * FROM peeps"),   // Duplicate CTE names
+            new FailTest("WITH peeps AS (SELECT * FROM R), peeps1 AS (SELECT * FROM peeps1 UNION ALL SELECT * FROM peeps WHERE (1=0)) SELECT * FROM peeps"),  // CTE can't reference itself in first clause of UNION
+            new FailTest("WITH peeps AS (SELECT * FROM peeps1), peeps1 AS (SELECT * FROM R) SELECT * FROM peeps"),    // Forward reference
+            new FailTest("WITH peeps1 AS (SELECT * FROM R), peeps AS (SELECT * FROM peeps1 UNION ALL SELECT * FROM peeps WHERE (1=0) UNION ALL SELECT * FROM peeps WHERE (1=0)) SELECT * FROM peeps"),  // Can't have 2 recursive references
+            new FailTest("WITH peeps AS (SELECT * FROM R), peeps2 AS (SELECT seven FROM peeps UNION ALL SELECT date FROM peeps) SELECT * FROM peeps2"),   // Column type mismatch
+            new FailTest("WITH peeps2 AS (SELECT seven FROM R UNION SELECT seven FROM S WHERE S.seven IN (SELECT seven FROM peeps2) ) SELECT * FROM peeps2"),
 
-        // UNDONE: should work since R.seven and seven are the same
-        new FailTest("SELECT R.seven, twelve, COUNT(*) as C FROM R GROUP BY seven, twelve PIVOT C BY seven IN (0, 1, 2, 3, 4, 5, 6)"),
+            // UNDONE: should work since R.seven and seven are the same
+            new FailTest("SELECT R.seven, twelve, COUNT(*) as C FROM R GROUP BY seven, twelve PIVOT C BY seven IN (0, 1, 2, 3, 4, 5, 6)"),
 
-        new FailTest("SELECT A.Name FROM core.Modules A FULL JOIN core.Modules B ON B.Name=C.Name FULL JOIN core.Modules C ON A.Name=C.Name"), // Missing from-clause entry
+            new FailTest("SELECT A.Name FROM core.Modules A FULL JOIN core.Modules B ON B.Name=C.Name FULL JOIN core.Modules C ON A.Name=C.Name"), // Missing from-clause entry
 
-        // trailing semicolon in subselect
-        new FailTest("SELECT Parent FROM (SELECT Parent FROM core.containers;) AS X"),
+            // trailing semicolon in subselect
+            new FailTest("SELECT Parent FROM (SELECT Parent FROM core.containers;) AS X"),
 
-        // Regression test for Issue 40618: Generate better error message when PIVOT column list can't be computed due to bad sql
-        new FailTest("SELECT A, B, count(*) As C " +
-            "FROM (SELECT seven as A, twelve/0 AS B FROM lists.R) " +
-            "GROUP BY A, B " +
-            "PIVOT C BY B", false),
+            // Regression test for Issue 40618: Generate better error message when PIVOT column list can't be computed due to bad sql
+            new FailTest("SELECT A, B, count(*) As C " +
+                "FROM (SELECT seven as A, twelve/0 AS B FROM lists.R) " +
+                "GROUP BY A, B " +
+                "PIVOT C BY B", false),
 
-        // VALUES tests
-        new FailTest("SELECT column1, column2 FROM (VALUES (CAST('1' as VARCHAR), CAST('1' as INTEGER)), ('two', 2))"), // require alias
-        new FailTest("SELECT column1, column2 FROM (VALUES (a,b),(1,2)) as x"), // can't use identifiers
+            // VALUES tests
+            new FailTest("SELECT column1, column2 FROM (VALUES (CAST('1' as VARCHAR), CAST('1' as INTEGER)), ('two', 2))"), // require alias
+            new FailTest("SELECT column1, column2 FROM (VALUES (a,b),(1,2)) as x") // can't use identifiers
+        );
     };
 
-    private static final InvolvedColumnsTest[] involvedColumnsTests = new InvolvedColumnsTest[]
+    private static List<InvolvedColumnsTest> involvedColumnsTests()
     {
-        new InvolvedColumnsTest("SELECT R.seven FROM R UNION SELECT S.seven FROM Folder.qtest.lists.S S",
-                                Arrays.asList("R/seven", "S/seven")),
-        new InvolvedColumnsTest("SELECT R.seven FROM R UNION ALL SELECT S.seven FROM Folder.qtest.lists.S S",
-                                Arrays.asList("R/seven", "S/seven")),
-        new InvolvedColumnsTest("SELECT 'R' as x, R.seven FROM R UNION SELECT 'S' as x, S.seven FROM Folder.qtest.lists.S S",
-                Arrays.asList("R/seven", "S/seven")),
-        new InvolvedColumnsTest("SELECT 'R' as x, R.seven FROM R UNION SELECT 'S' as x, S.seven FROM Folder.qtest.lists.S S UNION SELECT 'T' as t, R.twelve FROM R",
-                                Arrays.asList("R/seven", "S/seven", "R/twelve")),
-        new InvolvedColumnsTest("(SELECT 'R' as x, R.seven FROM R) UNION (SELECT 'S' as x, S.seven FROM Folder.qtest.lists.S S UNION SELECT 'T' as t, R.twelve FROM R)",
-                                Arrays.asList("R/seven", "S/seven", "R/twelve")),
-        new InvolvedColumnsTest("(SELECT x, y FROM (SELECT 'S' as x, S.seven as y FROM Folder.qtest.lists.S S UNION SELECT 'T' as t, R.twelve as y FROM R) UNION (SELECT 'R' as x, R.seven as y FROM R))",
-                                Arrays.asList("R/seven", "S/seven", "R/twelve")),
+        return List.of(
+            new InvolvedColumnsTest("SELECT R.seven FROM R UNION SELECT S.seven FROM Folder.qtest.lists.S S",
+                                    Arrays.asList("R/seven", "S/seven")),
+            new InvolvedColumnsTest("SELECT R.seven FROM R UNION ALL SELECT S.seven FROM Folder.qtest.lists.S S",
+                                    Arrays.asList("R/seven", "S/seven")),
+            new InvolvedColumnsTest("SELECT 'R' as x, R.seven FROM R UNION SELECT 'S' as x, S.seven FROM Folder.qtest.lists.S S",
+                    Arrays.asList("R/seven", "S/seven")),
+            new InvolvedColumnsTest("SELECT 'R' as x, R.seven FROM R UNION SELECT 'S' as x, S.seven FROM Folder.qtest.lists.S S UNION SELECT 'T' as t, R.twelve FROM R",
+                                    Arrays.asList("R/seven", "S/seven", "R/twelve")),
+            new InvolvedColumnsTest("(SELECT 'R' as x, R.seven FROM R) UNION (SELECT 'S' as x, S.seven FROM Folder.qtest.lists.S S UNION SELECT 'T' as t, R.twelve FROM R)",
+                                    Arrays.asList("R/seven", "S/seven", "R/twelve")),
+            new InvolvedColumnsTest("(SELECT x, y FROM (SELECT 'S' as x, S.seven as y FROM Folder.qtest.lists.S S UNION SELECT 'T' as t, R.twelve as y FROM R) UNION (SELECT 'R' as x, R.seven as y FROM R))",
+                                    Arrays.asList("R/seven", "S/seven", "R/twelve")),
 
-        new InvolvedColumnsTest("SELECT R.seven FROM R UNION SELECT R.seven FROM R UNION SELECT R.twelve FROM R",
-                                Arrays.asList("R/seven", "R/twelve")),
-        new InvolvedColumnsTest("(SELECT R.seven FROM R UNION SELECT R.seven FROM R) UNION ALL SELECT R.twelve FROM R",
-                                Arrays.asList("R/seven", "R/twelve")),
-        new InvolvedColumnsTest("(SELECT R.seven FROM R UNION ALL SELECT R.seven FROM R) UNION SELECT R.twelve FROM R",
-                                Arrays.asList("R/seven", "R/twelve")),
-        new InvolvedColumnsTest("SELECT R.seven FROM R UNION ALL SELECT R.seven FROM R UNION ALL SELECT R.twelve FROM R",
-                                Arrays.asList("R/seven", "R/twelve")),
-        new InvolvedColumnsTest("SELECT u.seven FROM (SELECT R.seven FROM R UNION SELECT R.seven FROM R UNION SELECT R.twelve FROM R) u WHERE u.seven > 5",
-                                Arrays.asList("R/seven", "R/twelve")),
+            new InvolvedColumnsTest("SELECT R.seven FROM R UNION SELECT R.seven FROM R UNION SELECT R.twelve FROM R",
+                                    Arrays.asList("R/seven", "R/twelve")),
+            new InvolvedColumnsTest("(SELECT R.seven FROM R UNION SELECT R.seven FROM R) UNION ALL SELECT R.twelve FROM R",
+                                    Arrays.asList("R/seven", "R/twelve")),
+            new InvolvedColumnsTest("(SELECT R.seven FROM R UNION ALL SELECT R.seven FROM R) UNION SELECT R.twelve FROM R",
+                                    Arrays.asList("R/seven", "R/twelve")),
+            new InvolvedColumnsTest("SELECT R.seven FROM R UNION ALL SELECT R.seven FROM R UNION ALL SELECT R.twelve FROM R",
+                                    Arrays.asList("R/seven", "R/twelve")),
+            new InvolvedColumnsTest("SELECT u.seven FROM (SELECT R.seven FROM R UNION SELECT R.seven FROM R UNION SELECT R.twelve FROM R) u WHERE u.seven > 5",
+                                    Arrays.asList("R/seven", "R/twelve")),
 
-        new InvolvedColumnsTest("SELECT R.seven FROM R ORDER BY twelve",
-                                Arrays.asList("R/seven", "R/twelve")),
-        new InvolvedColumnsTest("SELECT seven, twelve, COUNT(*) as C FROM R GROUP BY seven, twelve PIVOT C BY seven IN (0, 1, 2, 3, 4, 5, 6) ORDER BY twelve LIMIT 4",
-                                Arrays.asList("R/seven", "R/twelve")),
-        new InvolvedColumnsTest("SELECT MAX(R.seven) FROM R GROUP BY twelve",
-                                   Arrays.asList("R/seven", "R/twelve")),
-        new InvolvedColumnsTest("SELECT MAX(seven) As MaxSeven, twelve FROM R GROUP BY twelve PIVOT MaxSeven BY twelve",
-                                   Arrays.asList("R/seven", "R/twelve")),
+            new InvolvedColumnsTest("SELECT R.seven FROM R ORDER BY twelve",
+                                    Arrays.asList("R/seven", "R/twelve")),
+            new InvolvedColumnsTest("SELECT seven, twelve, COUNT(*) as C FROM R GROUP BY seven, twelve PIVOT C BY seven IN (0, 1, 2, 3, 4, 5, 6) ORDER BY twelve LIMIT 4",
+                                    Arrays.asList("R/seven", "R/twelve")),
+            new InvolvedColumnsTest("SELECT MAX(R.seven) FROM R GROUP BY twelve",
+                                       Arrays.asList("R/seven", "R/twelve")),
+            new InvolvedColumnsTest("SELECT MAX(seven) As MaxSeven, twelve FROM R GROUP BY twelve PIVOT MaxSeven BY twelve",
+                                       Arrays.asList("R/seven", "R/twelve"))
+        );
     };
 
     @TestWhen(TestWhen.When.BVT)
@@ -2225,13 +2375,13 @@ d,seven,twelve,day,month,date,duration,guid
 
 			if (dialect.isPostgreSQL())
 			{
-				for (SqlTest test : postgresOnlyFunctions)
+				for (SqlTest test : postgresOnlyFunctions())
                 {
 					test.validate(this, null);
                 }
 			}
 
-			for (SqlTest test : negative)
+			for (SqlTest test : negative())
 			{
 				test.validate(this, null);
 			}
@@ -2246,7 +2396,7 @@ d,seven,twelve,day,month,date,duration,guid
                 }
             }
 
-            for (InvolvedColumnsTest test : involvedColumnsTests)
+            for (InvolvedColumnsTest test : involvedColumnsTests())
             {
                 test.validate(this, null);
             }
